[gd_scene load_steps=8 format=3 uid="uid://bt4xx3jjtx8sx"]

[ext_resource type="Script" path="res://script/main.gd" id="1_csl75"]
[ext_resource type="Texture2D" uid="uid://ctowbtaym3sbg" path="res://assets/ui/background.png" id="2_gbawg"]
[ext_resource type="Texture2D" uid="uid://bhufjdifs67jt" path="res://img/ChatGPT Image 21 เม.ย. 2568 19_28_31.png" id="3_7fkdk"]
[ext_resource type="Theme" uid="uid://qt1jukm2lhon" path="res://assets/DarkTheme/Dark.theme" id="3_wpnjc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qf3oo"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_i2tgq"]

[sub_resource type="Theme" id="Theme_7omgw"]

[node name="Main2" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_csl75")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1159.0
offset_bottom = 650.0
color = Color(0, 0, 0, 1)

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(581, 368)
scale = Vector2(1.13477, 1)
texture = ExtResource("2_gbawg")

[node name="NinePatchRect2" type="NinePatchRect" parent="."]
layout_mode = 0
offset_left = 17.0
offset_top = 16.0
offset_right = 102.0
offset_bottom = 62.0
texture = ExtResource("3_7fkdk")

[node name="Button" type="Button" parent="NinePatchRect2"]
layout_mode = 0
offset_right = 83.0
offset_bottom = 45.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
theme_override_styles/hover = SubResource("StyleBoxEmpty_qf3oo")
theme_override_styles/normal = SubResource("StyleBoxEmpty_i2tgq")
text = "EXIT"

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -304.5
offset_top = -141.0
offset_right = 304.5
offset_bottom = 224.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_7omgw")
texture = ExtResource("3_7fkdk")
region_rect = Rect2(-1.675, -0.662, 1524.06, 1012.83)
patch_margin_left = 10
patch_margin_top = 8
patch_margin_right = 9
patch_margin_bottom = 6
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="NinePatchRect" type="NinePatchRect" parent="NinePatchRect"]
layout_mode = 2
offset_left = 167.5
offset_top = 326.0
offset_right = 427.5
offset_bottom = 326.0

[node name="NameInput" type="LineEdit" parent="NinePatchRect/NinePatchRect"]
layout_mode = 2
offset_left = -122.5
offset_top = -289.0
offset_right = 397.5
offset_bottom = -212.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_wpnjc")
theme_override_font_sizes/font_size = 42
placeholder_text = "Name"
alignment = 1

[node name="IPInput" type="LineEdit" parent="NinePatchRect/NinePatchRect"]
layout_mode = 2
offset_left = -125.5
offset_top = -201.0
offset_right = 398.5
offset_bottom = -116.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_wpnjc")
theme_override_colors/font_placeholder_color = Color(0.741385, 0.741385, 0.741385, 1)
placeholder_text = "IP"

[node name="HostButton" type="Button" parent="NinePatchRect/NinePatchRect"]
layout_mode = 2
offset_left = -129.5
offset_top = -98.0
offset_right = 130.5
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_wpnjc")
theme_override_font_sizes/font_size = 64
text = "Host"

[node name="JoinButton" type="Button" parent="NinePatchRect/NinePatchRect"]
layout_mode = 2
offset_left = 139.5
offset_top = -98.0
offset_right = 399.5
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_wpnjc")
theme_override_font_sizes/font_size = 64
text = "Join
"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -315.0
offset_top = 30.0
offset_right = 323.0
offset_bottom = 190.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0.435192, 0.435192, 0.435192, 0.564706)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 100
text = "Lucky Dice"
